# Coco-LIC

./: CMakeLists.txt
config/: ct_odometry_fastlivo.yaml  ct_odometry_fastlivo2.yaml  ct_odometry_lisbon_0713_720p.yaml  ct_odometry_lisbon_0714.yaml  ct_odometry_lisbon_0714_off.yaml  ct_odometry_lissabon.yaml  ct_odometry_lissabon_lc.yaml  ct_odometry_lissabon_lc_vpr.yaml  ct_odometry_lvisam.yaml  ct_odometry_m2dgr.yaml  ct_odometry_m2dgr_inject.yaml  ct_odometry_m2dgr_lc.yaml  ct_odometry_m2dgr_poscontrol.yaml  ct_odometry_r3live.yaml  ct_odometry_viral.yaml  ct_odometry_viral_inject.yaml  ct_odometry_viral_inject_none.yaml  ct_odometry_viral_lc.yaml
config/fastlivo/: camera.yaml
config/fastlivo2/: camera.yaml  imu.yaml  lidar.yaml
config/lissabon/: camera_realsense.yaml  camera_zed2i.yaml  imu.yaml  lidar.yaml
config/lissabon/org/: camera_1280x720_zed.yaml  camera_1920x1080_realsense.yaml  handheld_1280x720.yaml  handheld_1920x1080.yaml  lidar.yaml
config/lvisam/: camera.yaml  imu.yaml
config/m2dgr/: camera.yaml  imu.yaml  lidar.yaml
config/r3live/: camera.yaml  imu.yaml
config/viral/: camera.yaml  lidar.yaml
launch/: odometry_headless.launch
src/lidar/: lidar_handler.cpp  lidar_handler.h  velodyne_feature_extraction.cpp
src/loop/: information_provider.h  loop_backend.cpp  loop_backend.h  loop_closure_manager.cpp  loop_closure_manager.h  loop_config.h  loop_detector.h  loop_types.h  loop_verifier.cpp  loop_verifier.h  pose_graph.cpp  pose_graph.h  scan_context_detector.cpp  scan_context_detector.h  spatial_detector.cpp  spatial_detector.h  trajectory_deformer.cpp  trajectory_deformer.h  visual_bow_detector.cpp  visual_bow_detector.h
src/loop/test/: smoke_pose_graph.cpp  smoke_scan_context.cpp  smoke_verifier.cpp  test_trajectory_deformer.cpp
src/odom/: gs_exporter.h  msg_manager.cpp  msg_manager.h  odometry_manager.cpp  odometry_manager.h  odometry_viewer.h  trajectory_estimator.cpp  trajectory_estimator.h  trajectory_estimator_options.h  trajectory_manager.cpp  trajectory_manager.h
src/odom/factor/: ceres_local_param.h
src/odom/factor/analytic_diff/: image_feature_factor.h  loop_closure_factor.h  marginalization_factor.cpp
src/sophus_lib/: rotation_matrix.hpp
src/utils/: cloud_tool.h  parameter_struct.h
